2002-08-22  Clint Adams  <clint@zsh.org>

	* 17571: Src/Modules/terminfo.c: backport of terminfo segfault
        fix from 4.1.

2002-08-19  Felix Rosencrantz  <f_rosencrantz@yahoo.com>

	* 16863, 17562: Completion/Unix/Command/.distfiles:
	Forgot to add _larch and _valgrind

2002-08-18  Felix Rosencrantz  <f_rosencrantz@yahoo.com>

	* 16863, 17562 : Completion/Unix/Command/_larch,
	Completion/Unix/Command/_valgrind: merge new larch&valgrind
	completions from 4.1 branch

2002-08-17  Clint Adams  <clint@zsh.org>

	* unposted: Functions/Prompts/prompt_clint_setup: correct %v typo.

2002-08-14  Oliver Kiddle  <opk@zsh.org>

	* 16000, 16393 (Clint): Completion/Debian/Command/_debchange,
	Completion/Debian/Command/_apt-show-versions: merge new Debian
	completions from 4.1 branch

	* 17125 (Andrej), 17245: Completion/Unix/Command/_texinfo:
	merge texinfo completion from 4.1 branch

	* 17521: Completion/Unix/Command/_ant,
	Completion/Unix/Command/.distfiles: new completion for ant
 
2002-08-14  Peter Stephenson  <pws@csr.com>

	* unposted: Config/version.mk: version 4.0.6.

	* 17542 (Thomas Stromberg <thomas@stromberg.org>):
	Completion/Unix/Command/_mount: most systems don't have /etc/mnt.

2002-08-12  Peter Stephenson  <pws@csr.com>

	* 17482 (Karl Tomlinson): Src/Modules/termcap.c,
	Src/Modules/terminfo.c: resolve confusion over use of get/set
	functions for special parameters.

2002-08-10  Clint Adams  <clint@zsh.org>

	* 17206 (Bruno Bonfils), 17207 (Oliver):
	Completion/Debian/Command/.distfiles,
	Completion/Debian/Command/_auto-apt: completion for
	auto-apt, with a couple of _values tweaks.

2002-08-09  Peter Stephenson  <pws@csr.com>

	* unposted: Completion/Debian/Command/.distfiles,
	Completion/Unix/Command/.distfiles, Config/version.mk,
	Etc/.distfiles, Functions/Zle/.distfiles, Src/.distfiles:
	version 4.0.5.

2002-08-08  Peter Stephenson  <pws@csr.com>

	* 17517: Src/jobs.c: Another memory leak was showing up with the