@@ -1,3 +1,8 @@
+2002-09-04  Bart Schaefer  <schaefer@zsh.org>
+
+	* 16613 (modified): acconfig.h, zshconfig.ac, Src/init.c: detect
+	variant tgetent() return value and test for it correctly.
+
 2002-08-22  Clint Adams  <clint@zsh.org>
 
 	* 17571: Src/Modules/terminfo.c: backport of terminfo segfault
